fix: allows webapp buttons to wrap long text properly
- resolves issue of "Support ... by donating" button exceeding container width on small screens

--- a/src/features/common/WebappButton/WebappButton.module.scss
+++ b/src/features/common/WebappButton/WebappButton.module.scss
@@ -1,6 +1,11 @@
 @import '../../../theme/theme';
 
+.webappButtonLink {
+  max-width: 100%;
+}
+
 .webappButton {
+  max-width: 100%;
   padding: 6px 16px;
   display: flex;
   align-items: center;
@@ -44,7 +49,8 @@
   font-weight: 700;
   color: #2f3336;
   cursor: pointer;
-  line-height: 1;
+  line-height: 1.2;
+  text-wrap: wrap;
 }
 
 .primaryWebappButton {
